css/style.css
* {
    box-sizing: border-box;
}
body {
    font-family: sans-serif;
    background-color: #F5F5F5;
}

.header {
    padding-top: 6px;
    padding-bottom: 6px;
    background-color: #0050B3;
}
.header-block {
    max-width: 1196px;
    margin: auto;
    display: flex;
    align-items: center;
    justify-content: space-between;
}
.search-input {
    width: 336px;
    border: 1px solid #D9D9D9;
    border-radius: 4px;

    padding: 5px 30px 5px 12px;

    background-color: #fff;
    background-image: url(../img/search.svg);
    background-repeat: no-repeat;
    background-position: right 10px center;

    font-size: 14px;
    line-height: 22px;
    color: #BFBFBF;
}
.navigation {
    display: flex;
    align-items: center;
}
.user {
    display: flex;
    align-items: center;
}
.navigation-panel:before {
    content: '';
    width: 1px;
    height: 16px;
    background: #003A8C;

    margin-left: 12px;
}
.user-avatar {
    width: 32px;
    height: 32px;
    border-radius: 50%;
    margin-right: 8px;
    object-fit: cover;
    object-position: top;
}
.user-name {
    font-size: 14px;
    line-height: 22px;
    color: #FFF;
}
.navigation-panel {
    display: flex;
    align-items: center;
}
.navigation-link {
    display: flex;
    align-items: center;
    margin-left: 12px;

    color: #fff;
    text-decoration: none;
    font-size: 14px;
    line-height: 22px;
}
.navigation-link:after {
    content: '';
    width: 1px;
    height: 16px;
    background: #003A8C;

    margin-left: 12px;
}

.icons-panel {
    display: flex;
    align-items: center;
}
.icon-link {
    display: flex;
    align-items: center;
    margin-left: 12px;

    text-decoration: none;
}
.icon-link.pipe:before {
    content: '';
    width: 1px;
    height: 16px;
    background: #003A8C;

    margin-right: 12px;
}
.icon-link.menu:after {
    content: '';
    width: 16px;
    height: 16px;
    margin-left: 4px;

    mask-image: url(../img/dropdown.svg);
    background-color: #003A8C;
}
.icon-link.menu:hover:after {
    background-color: white;
}

.svg-icon {
    fill: #002766;
}
.svg-icon:hover {
    fill: white;
}

.container {
    display: flex;
    max-width: 1200px;
    margin: auto;
    margin-top: 16px;
}
.menu-sidebar {
    max-width: 192px;
}
.menu-sidebar .user {
    margin-left: 10px;
}
.menu-sidebar .user-avatar {
    width: 24px;
    height: 24px;
}
.menu-sidebar .user-name {
    font-size: 14px;
    line-height: 22px;

    color: #262626;
}
.nav-group {
    display: flex;
    flex-direction: column;
    justify-content: center;

    margin: 12px 0 24px 0;
}
.nav-title {
    margin-top: 0;
    margin-bottom: 4px;
    padding-left: 10px;

    color: #262626;
    font-weight: 600;
    font-size: 12px;
    line-height: 20px;
}
.nav-link {
    text-decoration: none;

    display: flex;
    align-items: center;
    padding: 4px 8px;
    border-radius: 4px;

    font-size: 14px;
    line-height: 22px;

    color: #595959;
}
.nav-link.active {
    background: #FFFFFF;

    font-weight: 600;
    color: #262626;
}
.nav-text {
    margin-left: 8px;
}

.main-feed {
    flex-grow: 1;
    max-width: 588px;
    margin-left: 12px;
}
.create-post {
    background: #FFFFFF;
    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
    border-radius: 4px;
    overflow: hidden;
}
.create-post-header {
    padding: 9px 16px;
    background: #F5F5F5;
    border-bottom: 1px solid #D9D9D9;
}
.create-post-title {
    margin: 0;

    font-size: 14px;
    line-height: 22px;
    color: #595959;
}
.create-post-body {
    display: flex;
    align-items: flex-start;

    padding: 16px 16px 24px 16px;
}
.create-post-input {
    padding-top: 8px;
    width: 100%;
}
.create-post-footer {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    margin: 0 16px 16px 16px;
    padding-top: 16px;

    border-top: 1px solid #E8E8E8;
}
.create-post-button {
    display: flex;
    align-items: center;

    background-color: #F5F5F5;
    border-radius: 48px;
    border: none;
    margin-right: 8px;
    padding: 9px 12px;
}
.create-post-button-text {
    margin-left: 8px;
}

